<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_hub" />
    <item
        android:id="@+id/nav_kanban"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/nav_board" />
    <item
        android:id="@+id/nav_finance"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_finance" />
    <item
        android:id="@+id/nav_templates"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/nav_templates" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_system" />
</menu>